# Yamaha_soundboard_app

./: CMakeLists.txt  README.md  appIcon.rc  pretty.json  qml.qrc
src/: CommandListManager.cpp  CommandListManager.h  ConnectionsChecker.cpp  ConnectionsChecker.h  JsonConfigManager.cpp  JsonConfigManager.h  JsonSerializable.cpp  JsonSerializable.h  MidiCommand.cpp  MidiCommand.h  MidiPortsManager.cpp  MidiPortsManager.h  PresetManager.cpp  PresetManager.h  RtMidi.cpp  SettingsManager.cpp  SettingsManager.h  main.cpp
src/qml/: ChangeChannelPresetPopup.qml  ChangeMixPresetPopup.qml  ChannelPresetPopup.qml  ChannelPresetsPage.qml  ChannelsPage.qml  CommandListPopup.qml  CommandSelectionItem.qml  ConfigurationsPage.qml  HomePage.qml  LoadChannelPresetPopup.qml  LoadMixPresetPopup.qml  LoadPredefinedListPopup.qml  MixPresetUsePopup.qml  MixPresetsPage.qml  MixesPage.qml  PopupWindow.qml  PresetUsePopup.qml  ProjectNamePopup.qml  SbcButton.qml  TabBarButton.qml  ViewCommandListPopup.qml  ViewMixCommandListPopup.qml  main.qml
